--- a/Modacity/Modacity/ViewController/PracticeItem/practice_item.storyboard
+++ b/Modacity/Modacity/ViewController/PracticeItem/practice_item.storyboard
@@ -857,7 +857,7 @@ Working On?</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9TA-cg-vpn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2612" y="-277.51124437781112"/>
+            <point key="canvasLocation" x="2561" y="78"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1kf-Fq-4Jl">
